deployment.template.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: $CI_ENVIRONMENT_SLUG-backend
spec:
  replicas: $REPLICAS
  template:
    metadata:
      labels:
        app: $CI_ENVIRONMENT_SLUG
        component: backend
    spec:
      containers:
        - name: $CI_ENVIRONMENT_SLUG-backend
          image: $DOCKER_IMAGE_FULL_NAME 
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
        - name: polkadot
          image: parity/polkadot:0.3.0-3ae3200
          ports:
          - containerPort: 9933
      imagePullSecrets:
        - name: azure-docker-registry-key
---
apiVersion: v1
kind: Service
metadata:
  name: $CI_ENVIRONMENT_SLUG-service
spec:
  selector:
    app: $CI_ENVIRONMENT_SLUG
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $CI_ENVIRONMENT_SLUG-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.entryPoints: "https,http"
spec:
  rules:
  - host: $AUTODEVOPS_HOST
    http:
      paths:
      - backend:
          serviceName: $CI_ENVIRONMENT_SLUG-service
          servicePort: 3000
